translation-tool/inputs/source_meta/objects/HSvc_NEM_ServiceAttribute__c.object
<CustomObject>
    <fields>
        <fullName>AssetRelatedField__c</fullName>
        <label>Asset Related Field</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_Object__c</fullName>
        <label>Destination Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Timezone</fullName>
                </value>
                <value>
                    <fullName>Service Attribute Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HNS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service / Product associated with attribute</description>
        <label>HNS Product</label>
        <referenceTo>HNS_Products__c</referenceTo>
        <relationshipName>Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Attribute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Attribute</label>
        <referenceTo>HSvc_NEM_ServiceAttribute__c</referenceTo>
        <relationshipName>Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service Attribute</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>